# langgraph-projects-zero-to-hero

./: .gitignore  README.md  main.py  pyproject.toml
project-1-ai-customer-support-workflow/: api.py  index.py  main.py  nodes.py  project_1.md  prompts.py  pyproject.toml  pyrightconfig.json  routing_functions.py  state_schemas.py  streamlit_app.py
project-1-ai-customer-support-workflow/src/: index.py  nodes.py  prompts.py  routing_functions.py  schemas.py
rag_architectures/crag-pdf-qna/: .env.example  crag_agent.md  docker-compose.yaml  initiate_logger.py  main.py  pyproject.toml
rag_architectures/crag-pdf-qna/app/: main.py
rag_architectures/crag-pdf-qna/app/models/: ingestion.py
rag_architectures/crag-pdf-qna/app/routers/: ingestion.py  query.py
rag_architectures/crag-pdf-qna/app/services/: ingestion.py  query.py
rag_architectures/crag-pdf-qna/crag_agent/: agent_api_layer.py
rag_architectures/crag-pdf-qna/crag_agent/agent/: graph.py  nodes.py  prompts.py  routers.py  schemas.py  state_schemas.py  utils.py
rag_architectures/crag-pdf-qna/crag_agent/ingestion/: index.py
rag_architectures/crag-pdf-qna/crag_agent/retrieval/: index.py
rag_architectures/crag-pdf-qna/crag_agent/vectorstore/: pgvector_store.py
