[project]
name = "ai-customer-support-workflow"
version = "0.1.0"
description = "A simple LangGraph workflow where a user sends a support query, and your graph processes it intelligently."
readme = "project_1.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "streamlit>=1.58.0",
]
