[project]
name = "crag-pdf-qna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "onnxruntime>=1.26.0",
    "python-dotenv>=1.2.2",
    "rapidocr>=3.8.1",
    "rapidocr-onnxruntime>=1.4.4",
    "unstructured[pdf]>=0.22.31",
]
